--- a/exporters/prometheus-dcgm/k8s/pod-gpu-metrics-exporter/Dockerfile
+++ b/exporters/prometheus-dcgm/k8s/pod-gpu-metrics-exporter/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.11 as build
 
 WORKDIR /go/src/pod-gpu-metrics-exporter
-COPY src .
+COPY exporters/prometheus-dcgm/k8s/pod-gpu-metrics-exporter/src .
 
 RUN go install -v pod-gpu-metrics-exporter
 
