--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,18 @@ commands:
       - run:
           name: "Docker login"
           command: docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASS"
+
+  test_installkit:
+    steps:
+      - run:
+          name: "Test installkit"
+          command: |
+            printf "Triggering an installkit build on $CIRCLE_BRANCH branch\n\n"
+
+            curl -X POST --header “Content-Type: application/json” -d '{"branch": $CIRCLE_BRANCH}' \
+                "https://circleci.com/api/v1.1/project/github/run-ai/installkit-customer/build?circle-token=$INSTALLKIT_TOKEN"
+
+            printf "\n\nFollow the progress of the build on: https://circleci.com/gh/run-ai/installkit-customer/tree/$CIRCLE_BRANCH"
 jobs:
   deploy-dcgm-exporter-staging:
     docker:
@@ -24,6 +36,8 @@ jobs:
             docker build -t runai/dcgm-exporter-staging:$TAG -f exporters/prometheus-dcgm/dcgm-exporter/Dockerfile .
             docker push runai/dcgm-exporter-staging:$TAG
 
+      - test_installkit
+
   deploy-pod-gpu-metrics-exporter-staging:
     docker:
       - image: circleci/golang:1.11
@@ -36,6 +50,8 @@ jobs:
             TAG=1.0.0
             docker build -t runai/pod-gpu-metrics-exporter-staging:$TAG -f exporters/prometheus-dcgm/k8s/pod-gpu-metrics-exporter/Dockerfile .
             docker push runai/pod-gpu-metrics-exporter-staging:$TAG
+
+      - test_installkit
 
   deploy-dcgm-exporter-production:
     docker:
@@ -50,6 +66,8 @@ jobs:
             docker build -t runai/dcgm-exporter-production:$TAG -f exporters/prometheus-dcgm/dcgm-exporter/Dockerfile .
             docker push runai/dcgm-exporter-production:$TAG
 
+      - test_installkit
+
   deploy-pod-gpu-metrics-exporter-production:
     docker:
       - image: circleci/golang:1.11
@@ -62,6 +80,8 @@ jobs:
             TAG=1.0.0
             docker build -t runai/pod-gpu-metrics-exporter-production:$TAG -f exporters/prometheus-dcgm/k8s/pod-gpu-metrics-exporter/Dockerfile .
             docker push runai/pod-gpu-metrics-exporter-production:$TAG
+
+      - test_installkit
 workflows:
   version: 2
   build_and_deploy:
