--- a/dcgm-exporter/Dockerfile
+++ b/dcgm-exporter/Dockerfile
@@ -3,10 +3,10 @@ FROM ubuntu:16.04
 ARG DCGM_VERSION
 
 RUN apt-get update && apt-get install -y --no-install-recommends libgomp1 \
-    wget && \
+    ca-certificates wget && \
     rm -rf /var/lib/apt/lists/*
 
-RUN wget --no-check-certificate https://developer.download.nvidia.com/compute/redist/dcgm/${DCGM_VERSION}/DEBS/datacenter-gpu-manager_${DCGM_VERSION}_amd64.deb && \
+RUN wget https://developer.download.nvidia.com/compute/redist/dcgm/${DCGM_VERSION}/DEBS/datacenter-gpu-manager_${DCGM_VERSION}_amd64.deb && \
     dpkg -i datacenter-gpu-manager_*.deb && \
     rm -f datacenter-gpu-manager_*.deb
 
