--- a/docker/Dockerfile.ubi8
+++ b/docker/Dockerfile.ubi8
@@ -16,7 +16,7 @@ RUN yum install -y wget libgomp && \
     rm ./datacenter-gpu-manager-*.rpm
 
 COPY --from=builder /go/src/github.com/NVIDIA/gpu-monitoring-tools/dcgm-exporter /usr/bin/
-COPY etc/dcgm-exporter /etc
+COPY etc/dcgm-exporter /etc/dcgm-exporter
 
 RUN useradd dcgm-exporter
 USER dcgm-exporter
