Ensure all GPUs are visible
Signed-off-by: Renaud Gaubert <rgaubert@nvidia.com>

--- a/docker/Dockerfile.ubuntu18.04
+++ b/docker/Dockerfile.ubuntu18.04
@@ -21,6 +21,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     dpkg -i datacenter-gpu-manager_*.deb && \
     rm -f datacenter-gpu-manager_*.deb
 
+ENV NVIDIA_VISIBLE_DEVICES=all
 
 RUN useradd dcgm-exporter
 USER dcgm-exporter
