--- a/docker/Dockerfile.ubi8
+++ b/docker/Dockerfile.ubi8
@@ -18,6 +18,8 @@ RUN yum install -y wget libgomp && \
 COPY --from=builder /go/src/github.com/NVIDIA/gpu-monitoring-tools/dcgm-exporter /usr/bin/
 COPY etc/dcgm-exporter /etc/dcgm-exporter
 
+ENV NVIDIA_VISIBLE_DEVICES=all
+
 RUN useradd dcgm-exporter
 USER dcgm-exporter
 
