for K8s/oc, move DCGM from port 8080 to port 9400
Signed-off-by: Jon Mayo <jmayo@nvidia.com>

--- a/daemonset.yaml
+++ b/daemonset.yaml
@@ -15,10 +15,13 @@ spec:
     spec:
       containers:
       - image: nvidia/dcgm-exporter:2.0.0-rc.0
+        env:
+          - name: DCGM_EXPORTER_PORT
+            value: 9400
         name: dcgm-exporter
         ports:
         - name: gpu-metrics
-          containerPort: 8080
+          containerPort: 9400
         securityContext:
           runAsNonRoot: false
           runAsUser: 0
