--- a/docker/Dockerfile.ubuntu18.04
+++ b/docker/Dockerfile.ubuntu18.04
@@ -4,7 +4,7 @@ WORKDIR /go/src/github.com/NVIDIA/gpu-monitoring-tools
 
 COPY . .
 
-RUN make binary
+RUN make binary check-format
 
 FROM ubuntu:18.04
 LABEL io.k8s.display-name="NVIDIA DCGM Exporter"
