--- a/deployment/dcgm-exporter/templates/daemonset.yaml
+++ b/deployment/dcgm-exporter/templates/daemonset.yaml
@@ -68,13 +68,13 @@ spec:
           livenessProbe:
             httpGet:
               path: /health
-              port: http
+              port: 9400
             initialDelaySeconds: 5
             periodSeconds: 5
           readinessProbe:
             httpGet:
               path: /health
-              port: http
+              port: 9400
             initialDelaySeconds: 5
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
