--- a/deployment/dcgm-exporter/templates/service.yaml
+++ b/deployment/dcgm-exporter/templates/service.yaml
@@ -16,6 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "dcgm-exporter.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "dcgm-exporter.labels" . | nindent 4 }}
     app.kubernetes.io/component: "dcgm-exporter"
