Add serviceMonitor config
Signed-off-by: Gilad Zamoscinski <gilad@zamo.net>

Add serviceMonitor config

Signed-off-by: Gilad Zamoscinski <gilad@zamo.net>

--- a/deployment/dcgm-exporter/values.yaml
+++ b/deployment/dcgm-exporter/values.yaml
@@ -54,6 +54,11 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
+serviceMonitor:
+  enabled: true
+  namespace: monitoring
+  interval: 30s
+
 mapPodsMetrics: false
 
 nodeSelector: {}
