--- a/deployment/dcgm-exporter/templates/serviceaccount.yaml
+++ b/deployment/dcgm-exporter/templates/serviceaccount.yaml
@@ -3,6 +3,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "dcgm-exporter.serviceAccountName" . }}
+{{- if .Values.namespace }}
+  namespace: {{ .Values.namespace }}
+{{- end }}
   labels:
     {{- include "dcgm-exporter.labels" . | nindent 4 }}
     app.kubernetes.io/component: "dcgm-exporter"
