--- a/deployment/dcgm-exporter/values.yaml
+++ b/deployment/dcgm-exporter/values.yaml
@@ -14,8 +14,10 @@
 
 image:
   repository: nvidia/dcgm-exporter
-  tag: 1.7.2
   pullPolicy: IfNotPresent
+  # Image tag defaults to AppVersion, but you can use the tag key
+  # for the image tag, e.g:
+  #tag: 1.7.2
 
 imagePullSecrets: []
 nameOverride: ""
