--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "aws-kube-ci"]
 	path = aws-kube-ci
-	url = git@gitlab.com:nvidia/container-infrastructure/aws-kube-ci.git
+	url = https://gitlab.com/nvidia/container-infrastructure/aws-kube-ci.git
