--- a/dcgm-exporter.yaml
+++ b/dcgm-exporter.yaml
@@ -38,6 +38,8 @@ spec:
         env:
         - name: "DCGM_EXPORTER_LISTEN"
           value: "9400"
+        - name: "DCGM_EXPORTER_KUBERNETES"
+          value: true
         name: "dcgm-exporter"
         ports:
         - name: "metrics"
