Fix incorrect type for serviceMonitor spec.namespaceSelector.matchNames
Signed-off-by: Renaud Gaubert <rgaubert@nvidia.com>

--- a/deployment/dcgm-exporter/templates/service-monitor.yaml
+++ b/deployment/dcgm-exporter/templates/service-monitor.yaml
@@ -34,9 +34,9 @@ spec:
   namespaceSelector:
     matchNames:
 {{- if .Values.namespace }}
-      - namespace: "{{ .Values.namespace }}"
+      - "{{ .Values.namespace }}"
 {{ else }}
-      - namespace: "{{ .Release.Namespace }}"
+      - "{{ .Release.Namespace }}"
 {{- end }}
   endpoints:
     - port: "metrics"
