--- a/docker/Dockerfile.ubi8
+++ b/docker/Dockerfile.ubi8
@@ -20,8 +20,7 @@ COPY etc/dcgm-exporter /etc/dcgm-exporter
 
 ENV NVIDIA_VISIBLE_DEVICES=all
 
-RUN useradd dcgm-exporter
-USER dcgm-exporter
+USER root
 
 ARG VERSION
 
