dcgm-exporter.yaml now uses 'address' format
Signed-off-by: Colm Malone <Colm Malone colm.anseo@gmail.com>

--- a/dcgm-exporter.yaml
+++ b/dcgm-exporter.yaml
@@ -37,7 +37,7 @@ spec:
       - image: "nvidia/dcgm-exporter:1.7.2"
         env:
         - name: "DCGM_EXPORTER_LISTEN"
-          value: "9400"
+          value: ":9400"
         - name: "DCGM_EXPORTER_KUBERNETES"
           value: true
         name: "dcgm-exporter"
