Support custom annotations for the service
Signed-off-by: Danil Mironov <patrungel@gmail.com>

--- a/deployment/dcgm-exporter/templates/service.yaml
+++ b/deployment/dcgm-exporter/templates/service.yaml
@@ -22,6 +22,10 @@ metadata:
   labels:
     {{- include "dcgm-exporter.labels" . | nindent 4 }}
     app.kubernetes.io/component: "dcgm-exporter"
+  {{- with .Values.service.annotations }}
+  annotations:
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
