--- a/deployment/dcgm-exporter/values.yaml
+++ b/deployment/dcgm-exporter/values.yaml
@@ -50,6 +50,8 @@ service:
   type: ClusterIP
   port: 9400
   address: ":9400"
+  # Annotations to add to the service
+  annotations: {}
 
 resources: {}
   # limits:
