Be straight-forward about the namespace
Signed-off-by: Danil Mironov <patrungel@gmail.com>

--- a/deployment/dcgm-exporter/templates/daemonset.yaml
+++ b/deployment/dcgm-exporter/templates/daemonset.yaml
@@ -16,9 +16,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: {{ include "dcgm-exporter.fullname" . }}
-{{- if .Values.namespace }}
-  namespace: {{ .Values.namespace }}
-{{- end }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dcgm-exporter.labels" . | nindent 4 }}
     app.kubernetes.io/component: "dcgm-exporter"
