--- a/deployment/dcgm-exporter/templates/service-monitor.yaml
+++ b/deployment/dcgm-exporter/templates/service-monitor.yaml
@@ -17,9 +17,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "dcgm-exporter.fullname" . }}
-{{- if .Values.serviceMonitor.namespace }}
-  namespace: {{ .Values.serviceMonitor.namespace }}
-{{- end }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dcgm-exporter.labels" . | nindent 4 }}
     app.kubernetes.io/component: "dcgm-exporter"
@@ -36,11 +34,7 @@ spec:
     path: "/metrics"
   namespaceSelector:
     matchNames:
-{{- if .Values.namespace }}
-    - "{{ .Values.namespace }}"
-{{ else }}
     - "{{ .Release.Namespace }}"
-{{- end }}
   endpoints:
   - port: "metrics"
     path: "/metrics"
