--- a/deployment/dcgm-exporter/templates/service.yaml
+++ b/deployment/dcgm-exporter/templates/service.yaml
@@ -16,9 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "dcgm-exporter.fullname" . }}
-{{- if .Values.namespace }}
-  namespace: {{ .Values.namespace }}
-{{- end }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dcgm-exporter.labels" . | nindent 4 }}
     app.kubernetes.io/component: "dcgm-exporter"
