--- a/deployment/dcgm-exporter/Chart.yaml
+++ b/deployment/dcgm-exporter/Chart.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 name: dcgm-exporter
-description: A Helm chart for Kubernetes
+description: A Helm chart for DCGM exporter
+sources:
+- https://gitlab.com/nvidia/container-toolkit/gpu-monitoring-tools
 version: "1.0.1"
 appVersion: "1.7.2"
 kubeVersion: ">= 1.13.0"
